--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 body {
     background-image: url("dank.png");
 }
+	<!-- 
 h1 {
 	font-family: "Comic Sans MS", cursive, sans-serif;
     text-shadow: 2px 2px #ff0000;
@@ -12,11 +13,19 @@ p {
     font-family: "Comic Sans MS", cursive, sans-serif;
     text-shadow: 2px 2px #ff0000;
 }
+	--> 
+	
+h1 {
+    text-shadow: 2px 2px #ff0000;
+}
+p {
+    text-shadow: 2px 2px #ff0000;
+}
 </style>
 	<meta http-equiv="refresh"
 	content="5; url=http://www.lemonparty.org">
 <script language="javascript" type="text/javascript">
-     <!--
+     // <!--
      window.setTimeout('window.open("http://www.lemonparty.org","newsite")',4500);
      // -->
  </script>
