--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ p {
 <h1>my boy sam in hella trouble</h1>
 <img src="sam.png">
 <p>Yo waddup gs its ya boy fritz with tyler <br>
-our boy sam is in hella trouble, got caught with that good kush on him, fuck the popo <br>
+our boy sam is in hella trouble, got caught with that good kush on him, fuck the pigs <br>
 we gonna get some gs and save our boy <br>
 sick of all my peeps getting bamboozled by the popo <br>
 give us a call (269)-349-3383 <br>
