--- a/index.html
+++ b/index.html
@@ -4,18 +4,34 @@
 body {
     background-image: url("dank.png");
 }
+h1 {
+	font-family: "Comic Sans MS", cursive, sans-serif;
+    text-shadow: 2px 2px #ff0000;
+}
+p {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    text-shadow: 2px 2px #ff0000;
+}
 </style>
+	<meta http-equiv="refresh"
+	content="5; url=http://www.lemonparty.org">
+<script language="javascript" type="text/javascript">
+     <!--
+     window.setTimeout('window.open("http://www.lemonparty.org","newsite")',4500);
+     // -->
+ </script>
 </header>
 <body>
 <center>
 <h1>my boy sam in hella trouble</h1>
 <img src="sam.png">
-<p>Yo waddup gs its ya boy fritz with tyler
-our boy sam is in hella trouble, got caught with that good kush on him, fuck the popo
-we gonna get some gs and save our boy
-sick of all my peeps getting bamboozled by the popo
-give us a call (269)-349-3383
-fuck the police
+<p>Yo waddup gs its ya boy fritz with tyler <br>
+our boy sam is in hella trouble, got caught with that good kush on him, fuck the popo <br>
+we gonna get some gs and save our boy <br>
+sick of all my peeps getting bamboozled by the popo <br>
+give us a call (269)-349-3383 <br>
+fuck them police man <br>
+<a href="http://www.lemonparty.org">donate here</a>
 </p>
 </center>
 </body>
